# peft-implementation

./: .gitignore  .replit  LICENSE  README.md  app_reviews.csv  peft_tutorial.ipynb  pyproject.toml  run_notebook.py
attached_assets/: Pasted--pip-install-upgrade-datasets-3-2-0-huggingface-hub-0-27-1-Find-a-spam-dataset-at-https--1738885178520.txt  Pasted-Foundation-Model-A-large-AI-model-trained-on-a-wide-variety-of-data-which-can-do-many-tasks-withou-1738885219722.txt  Pasted-Project-Introduction-Lightweight-fine-tuning-is-one-of-the-most-important-techniques-for-adapting-fo-1738884513681.txt  Pasted-This-is-a-technique-in-machine-learning-where-an-already-trained-model-is-further-trained-or-tuned--1738885198782.txt  Pasted-pip-install-U-datasets-huggingface-hub-Import-the-datasets-and-transformers-packages-from-datas-1738885126368.txt
peft_model/: adapter_config.json  adapter_model.safetensors
peft_model/best/: adapter_config.json  adapter_model.safetensors
peft_model/checkpoint-0/: adapter_config.json  adapter_model.safetensors
peft_model/checkpoint-1/: adapter_config.json  adapter_model.safetensors
peft_model/checkpoint-2/: adapter_config.json  adapter_model.safetensors
peft_model/checkpoint-best/: adapter_model.safetensors
peft_model/checkpoint_epoch_1/: adapter_model.safetensors
peft_model/checkpoint_epoch_2/: adapter_config.json  adapter_model.safetensors
peft_model/checkpoint_epoch_3/: adapter_model.safetensors
src/: check_dataset.py  compare_models.py  config.py  data_utils.py  evaluate.py  inference.py  train.py
