[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "auto-gptq>=0.7.1",
    "bitsandbytes>=0.45.2",
    "datasets>=3.2.0",
    "openai>=1.61.1",
    "optimum>=1.24.0",
    "peft>=0.14.0",
    "psutil>=6.1.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "transformers>=4.48.2",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
